--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -10,11 +10,16 @@
   <tbody>
     <% books.each do |book| %>
       <tr>
-        <td><%= link_to book.user_path do %>
-          <%= image_tag book.user.get_profile_image(50,50) %>
+       <td>
+        <%= link_to user_path(book.user) do %>
+          <%= image_tag book.user.get_profile_image, size:"50x50" %>
+        <% end %>
+       </td>
+        <td>
+          <%= link_to book_path(book.id) do %>
+            <%= book.title %>
           <% end %>
         </td>
-        <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
       </tr>
     <% end %>
