--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
     
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
-      <%= render 'books/index',　books: @books %>
+      <%= render 'books/index', books: @books, user: @user %>
     </div>
     
   </div>
