[Add] いいね機能作成中

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -21,6 +21,7 @@
           <% end %>
         </td>
         <td><%= book.body %></td>
+        <%= render 'books/favorite', book: book %>
       </tr>
     <% end %>
   </tbody>
