[Add]いいね機能追加

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -21,7 +21,9 @@
           <% end %>
         </td>
         <td><%= book.body %></td>
-        <%= render 'books/favorite', book: book %>
+        <% if show_favorite %>
+        <td><%= render 'favorite', book: book %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
