--- a/app/views/books/_favorite.html.erb
+++ b/app/views/books/_favorite.html.erb
@@ -1,6 +1,6 @@
-<% if favorited_by?(current_user) %>
-  <%= link_to book_favorites_path(book), method: :delete do %>
-    <i class="fa-solid fa-heart"　style="color:red;"></i>
+<% if book.favorited_by?(current_user) %>
+  <%= link_to book_favorites_path(book), method: :delete, style: "color: red;" do %>
+    <i class="fa-solid fa-heart"></i>
     <%= book.favorites.count %>
   <% end %>
 <% else %>
