--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
-      <%= render 'index', books: @books %>
+      <td><%= render 'index', books: @books, show_favorite: @show_favorite%></td>
     </div>
   </div>
 </div>
