--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'users/info', user: @user %>
-      
+
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @new_book %>
     </div>
@@ -18,6 +18,7 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+           <td> <%= render 'favorite', book: @book %></td>
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
