--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,16 +3,16 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'info', user: @user %>
-      
+
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
-      
+
     </div>
-    
+
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
-      <%= render 'books/index', books: @books, user: @user %>
+      <%= render 'books/index', books: @books, user: @user, show_favorite: @show_favorite %>
     </div>
-    
+
   </div>
 </div>
