--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,13 +18,18 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-           <td> <%= render 'favorite', book: @book %></td>
+           <td> <%= render 'favorites/favorite', book: @book %></td>
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
+      <!--コメント機能-->
+      <%= form_with model: [@book, @book_comment] do |f| %>
+        <%= f.text_area :comment, rows: '5', class: "form-control introduction" %>
+        <%= f.submit "送信" %>
+      <% end %>
     </div>
   </div>
 </div>
