--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,10 +25,16 @@
           <% end %>
         </tr>
       </table>
+      <!--コメント一覧-->
+      <%= render 'book_comments/index', book: @book %>
       <!--コメント機能-->
       <%= form_with model: [@book, @book_comment] do |f| %>
-        <%= f.text_area :comment, rows: '5', class: "form-control introduction" %>
-        <%= f.submit "送信" %>
+        <div class="form-group">
+          <%= f.text_area :comment, rows: '5', class: "form-control introduction" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "送信" %>
+        </div>
       <% end %>
     </div>
   </div>
