--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -10,19 +10,15 @@
   <tbody>
     <% books.each do |book| %>
       <tr>
-       <td class="w-20">
-        <%= link_to user_path(book.user) do %>
-          <%= image_tag book.user.get_profile_image, size:"50x50" %>
-        <% end %>
-       </td>
-        <td class="w-25">
-          <%= link_to book_path(book.id) do %>
-            <%= book.title %>
+        <td>
+          <%= link_to user_path(book.user) do %>
+            <%= image_tag book.user.get_profile_image, size:"50x50" %>
           <% end %>
         </td>
-        <td class="w-25"><%= book.body %></td>
-        <td class="w-15"><%= render 'favorites/favorite', book: book %></td>
-        <td class="w-15">コメント数：<%= book.book_comments.count %></td>
+        <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
+        <td><%= book.body %></td>
+        <td><%= render 'favorites/favorite', book: book %></td>
+        <td>コメント数：<%= book.book_comments.count %></td>
       </tr>
     <% end %>
   </tbody>
