--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,11 +1,11 @@
 <% if book.favorited_by?(current_user) %>
   <%= link_to book_favorites_path(book), method: :delete, style: "color: red;" do %>
-    <i class="fa-solid fa-heart"></i>
+    <i class="fa-solid fa-heart" aria-hidden="true"></i>
     <%= book.favorites.count %>
   <% end %>
 <% else %>
   <%= link_to book_favorites_path(book), method: :post do %>
-    <i class="fa-solid fa-heart"></i>
+    <i class="fa-solid fa-heart" aria-hidden="true"></i>
     <%= book.favorites.count %>
   <% end %>
 <% end %>
