--- a/app/views/book_comments/_index.html.erb
+++ b/app/views/book_comments/_index.html.erb
@@ -10,7 +10,7 @@
         </td>
         <td><%= book_comment.comment %></td>
         <% if book_comment.user == current_user %>
-          <td><%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %></td>
+          <td><%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger", local: false %></td>
         <% end %>
       </tr>
     <% end %>
