--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#favorite_btn_<%= @book.id %>").html("<%= escape_javascript(render partial: 'favorites/favorite', book: @book %>");
+$("#favorite_btn_<%= @book.id %>").html("<%= j(render 'favorites/favorite', book: @book) %>");
