--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,3 +1,3 @@
+$("#comment_index").html("<%= j(render 'book_comments/index', book: @book ) %>");
+$("#comment_counter").html("<%= j(render 'book_comments/count', book: @book ) %>")
 $('#comment_textarea').val("")
-$("#comment_index").html("<%= j(render 'book_comments/index', book: @comment.book ) %>");
-$("#comment_counter").html("<%= j(render 'book_comments/count', book: @comment.book ) %>")
