--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,15 +40,9 @@
         <%= render 'book_comments/index', book: @book %>
       </div>
       <!--コメント機能-->
-      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
-      <!--%= form_with model: [@book, @book_comment], local: false do |f| %>-->
-      <!--  <div class="form-group">-->
-      <!--    %= f.text_area :comment, rows: '5', class: "form-control introduction", id: "comment_textarea" %>-->
-      <!--  </div>-->
-      <!--  <div class="form-group">-->
-      <!--    %= f.submit "送信" %>-->
-      <!--  </div>-->
-      <!--% end %>-->
+      <div id="comment_form">
+        <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+      </div>
     </div>
   </div>
 </div>
