--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,10 +1,10 @@
-<% if book.favorited_by?(current_user) %>
-  <%= link_to book_favorites_path(book), method: :delete, remote: true, data: {"turbolinks" => false}, style: "color: red;" do %>
-    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+<% if current_user.already_favorited?(book) %>
+  <%= link_to book_favorites_path(book), method: :delete, style: "color: red;" do %>
+    <i class="fa-solid fa-heart", aria-hidden="true"></i>
     <%= book.favorites.count %>
   <% end %>
 <% else %>
-  <%= link_to book_favorites_path(book), method: :post, remote: true, data: {"turbolinks" => false} do %>
+  <%= link_to book_favorites_path(book), method: :post do %>
     <i class="fa-solid fa-heart" aria-hidden="true"></i>
     <%= book.favorites.count %>
   <% end %>
