--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,7 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <td>
+        <td id="favorite_bun_<%= book.id %>">
           <%= render 'favorites/favorite', book: book %>
         </td>
         <td>コメント数：<%= book.book_comments.count %></td>
