--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,10 +1,10 @@
 <% if current_user.already_favorited?(book) %>
-  <%= link_to book_favorites_path(book), method: :delete, style: "color: red;" do %>
+  <%= link_to book_favorites_path(book), method: :delete, remote: true, style: "color: red;" do %>
     <i class="fa-solid fa-heart", aria-hidden="true"></i>
     <%= book.favorites.count %>
   <% end %>
 <% else %>
-  <%= link_to book_favorites_path(book), method: :post do %>
+  <%= link_to book_favorites_path(book), method: :post, remote: true do %>
     <i class="fa-solid fa-heart" aria-hidden="true"></i>
     <%= book.favorites.count %>
   <% end %>
