--- a/app/views/book_comments/_form.html.erb
+++ b/app/views/book_comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: [book, book_comment], local: false do |f| %>
   <div class="form-group">
-    <%= f.text_area :comment, rows: '5', class: "form-control introduction", id: "commen_textarea" %>
+    <%= f.text_area :comment, rows: '5', class: "form-control introduction", id: "comment_textarea" %>
   </div>
   <div class="form-group">
     <%= f.submit "送信" %>
