--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,2 +1,2 @@
-("#comment_index").html("<%= j(render 'book_comments/index', book: @book ) %>");
-$("#comment_counter").html("<%= j(render 'book_comments/count', book: @book ) %>")
+$("#comments_index").html("<%= j(render 'book_comments/index', book: @book ) %>");
+$("#comment_counter").html("コメント数：<%= @book.book_comments.count %>")
