--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,10 +17,15 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <td id="favorite_bun_<%= book.id %>">
+        <td id="favorite_btn_<%= book.id %>">
           <%= render 'favorites/favorite', book: book %>
         </td>
-        <td>コメント数：<%= book.book_comments.count %></td>
+        
+        <td>
+            <span id="comment_counter">
+             コメント数：<%= book.book_comments.count %>
+            </span>
+           </td>
       </tr>
     <% end %>
   </tbody>
