--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
           <!--コメント数-->
            <td>
             <span id="comment_counter">
-              コメント数：<%= render 'book_comments/count', book: @book %>
+              コメント数：<%= @book.book_comments.count %>
             </span>
            </td>
            <!--編集ボタン-->
@@ -40,7 +40,7 @@
         <%= render 'book_comments/index', book: @book %>
       </div>
       <!--コメント機能-->
-      <div id="comment_form">
+      <div>
         <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
       </div>
     </div>
