--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <%= form_with url: search_path, method: :get do |f| %>
+  <%= form_with url: search_path, method: :get, class: "rounded-4" do |f| %>
     <%= f.text_field :word %>
     <%= f.select :model, options_for_select(['User', 'Book']) %>
     <%= f.select :search,options_for_select([["完全一致","perfect"],["前方一致","forward"],["後方一致","backward"],["部分一致","partial"]]) %>
