--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -26,6 +26,7 @@
            コメント数：<%= book.book_comments.count %>
           </span>
         </td>
+          <td>閲覧数： <%= book.view_counts.count %></td>
       </tr>
     <% end %>
   </tbody>
