--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,11 +23,12 @@
             <%= render 'favorites/favorite', book: @book %>
           </td>
           <!--コメント数-->
-           <td>
+          <td>
             <span id="comment_counter">
               コメント数：<%= @book.book_comments.count %>
             </span>
-           </td>
+          </td>
+          <td>閲覧数： <%= @book.view_counts.count %></td>
            <!--編集ボタン-->
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
