--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,7 @@
       <%= render 'form', book: @new_book %>
     </div>
     <div class='col-md-8 offset-md-1'>
-  		<h2>Book detail</h2>
+  		<h2>Book Detail</h2>
   		<table class='table'>
   		  <tr>
           <td><%= link_to(@book.user) do %>
