--- a/app/views/groups/_index.html.erb
+++ b/app/views/groups/_index.html.erb
@@ -4,7 +4,7 @@
       <th></th>
       <th>グループ名</th>
       <th>紹介文</th>
-      <th colspan="3"></th>
+      <th>メンバー数</th>
     </tr>
   </thead>
   <tbody>
@@ -15,8 +15,9 @@
           <%= link_to group.name,group_path(group) %>
         </td>
         <td><%= group.introduction %></td>
+        <td><%= group.group_users.count %></td>
         <% if group.is_owned_by?(current_user) %>
-        <td><%= link_to "Edit", edit_group_path(group), class: "btn btn-sm btn-success" %></td>
+          <td><%= link_to "Edit", edit_group_path(group), class: "btn btn-sm btn-success" %></td>
         <% end %>
       </tr>
     <% end %>
