--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
-      <td><%= render 'index', books: @books %></td>
+      <%= render 'index', books: @books %>
     </div>
   </div>
 </div>
