--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -17,17 +17,18 @@
     <th><%= link_to user.followers.count, user_followers_path(user) %></th>
   </tr>
 </table>
-
-<div class='row'>
-  <% if current_user != user %>
-    <td><%= render 'relationships/btn', user: user, options: { class: ""} %></td>
-  <% else %>
-    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-      <i class="fas fa-user-cog"></i>
+<% if user.email != "guest@example.com" %>
+  <div class='row'>
+    <% if current_user != user %>
+      <td><%= render 'relationships/btn', user: user, options: { class: ""} %></td>
+    <% else %>
+      <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
     <% end %>
-  <% end %>
-  <!--チャット開始ボタン-->
-  <% if current_user != user && current_user.following?(user) && user.following?(current_user)%>
-    <td><%= link_to 'chatを始める', message_path(user.id), class: "ml-3" %></td>
-  <% end %>
-</div>
+    <!--チャット開始ボタン-->
+    <% if current_user != user && current_user.following?(user) && user.following?(current_user)%>
+      <td><%= link_to 'chatを始める', message_path(user.id), class: "ml-3" %></td>
+    <% end %>
+  </div>
+<% end %>
